Architecure modifié avec implmentation du CRUD Projet + interface projet